--- a/RentaVehiculos/nbproject/project.properties
+++ b/RentaVehiculos/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sgrv.gui.RentaVehiculos
+main.class=sgrv.gui.Inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
