--- a/RentaVehiculos/nbproject/project.properties
+++ b/RentaVehiculos/nbproject/project.properties
@@ -27,12 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/RentaVehiculos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.0.8-bin-g.jar=C:\\Users\\marai\\Downloads\\mysql-connector-java-5.0.8-bin-g.jar\\mysql-connector-java-5.0.8-bin-g.jar
+file.reference.mysql-connector-java-8.0.11.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-5.0.8-bin-g.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
